syntax = "proto3";

package greetServerStream;

option go_package = "greetpbServerStream";

message Greeting {
  string first_name = 1;
  string last_name = 2;
}

message GreetRequest {
  Greeting greeting = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService{
  rpc GreetStream(GreetRequest) returns (stream GreetResponse) {};
}